# Engineering-OS

./: .claudeignore  .cleanup-verify-md-sprawl.txt  .gitignore  .graphifyignore  .mcp.json  CLAUDE.md  CLAUDE.template.md  NOOP2  NOOP3  NOOP4  NOOP5  README.md  tmp-audit-create-test.md  tmp-checklist-test.txt  tmp-gap-test.txt  tmp-known-gaps-test.tsv  tmp-openai-tool-test.txt  tmp-phrase-test.md  tmp-target-test.txt
.checkpoints/: README.md  v3.0-experiments-start.md
.claude/: pr202-head.txt  settings.json
architecture-decisions/: ADR-2026-001-github-readonly-connector.md  ADR-2026-002-managed-settings-rollout.md  README.md
core/: capability-registry.yaml  coderabbit-policy.md  connector-policy.md  debugging-policy.md  documentation-policy.md  external-system-selection-policy.md  git-policy.md  hooks-policy.md  learning-loop.md  maintenance-routine.md  mcp-servers.md  pattern-lifecycle.md  precedence.md  quality-gates.md  resource-management.md  scoring-guide.md  skill-orchestration-policy.md  task-router.md  user-decision-policy.md  workflow.md
docs/: README.md  connector-enforcement-step1.md
evals/: README.md
external-skills/: README.md  official-packages.md  official-skill-packages.md
external-systems/: README.md  claude-managed-settings-rollout.md  github-readonly-connector.md
failed-solutions/: README.md  _TEMPLATE.md  (+1 more)
patterns/: README.md  (+1 more)
repo-auditor/: agent.py  github_client.py  mcp_server.py  pyproject.toml  report.py
repo-auditor/analyzers/: __init__.py  architecture.py  base.py  cicd.py  code_quality.py  documentation.py  security.py
(+802 files in other folders)
